--- a/sobre.html
+++ b/sobre.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Nós</title>
-    <link rel="shortcut icon" href="img/logo_black.png" type="image/x-icon"/>
-    <link rel="stylesheet" href="CSS/style.css">
+    <meta name="keywords" content="artesanato, artes feitas a mão, artes pequenas, pequenas artes"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="shortcut icon" href="img/logo_black.png" type="image/x-icon"/>
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <title>SmallArt</title>
+
 </head>
 <body>
     <div class="sidebar">
@@ -27,7 +30,7 @@
                 <span class="negocio">Pesquisar</span>
             </li>       
             <li>
-                <a href="login.php">
+                <a href="src/View/form_add_client.php">
                     <i class='bx bx-log-in' ></i>
                     <span class="links_name">Login</span>
                 </a>
@@ -54,32 +57,39 @@
                 </a>
                 <span class="negocio">Sobre Nós</span>
             </li>
+            <li>
+                <a href="src/View/count_user.php">
+                    <i class='bx bxs-user'></i>
+                    <span class="links_name">Sua Conta</span>
+                </a>
+                <span class="negocio">Sua Conta</span>
+            </li>
         </ul>
         <div class="profile_content">
             <div class="profile">
-                <div class="profile_details">
-                    <img src="img/profile_pic.jpeg" alt="foto de cadastro">
-                        <div class="name_job">
-                            <div class="name_people">João Gabriel</div>
-                            <div class="job">Web Designer</div>
-                        </div>
-                        <i class='bx bx-log-out'></i>
-                </div>
+                <a href="src/Controller/Client.php?operation=findall">
+                <i class='bx bx-log-out'></i>
+                </a>
             </div>
         </div>
-        </div>
-    <div>
-        <script>
-            let btn = document.querySelector("#btn");
-            let sidebar = document.querySelector(".sidebar");
-            let searchbtn = document.querySelector(".bx-search-alt-2");
-    
-            btn.onclick = function(){
-                sidebar.classList.toggle("active");
-            }
-            searchbtn.onclick = function(){
-                sidebar.classList.toggle("active");
-            }
-        </script>
+    </div>
+
+    <script>
+        let btn = document.querySelector("#btn");
+        let sidebar = document.querySelector(".sidebar");
+        let searchbtn = document.querySelector(".bx-search-alt-2");
+
+        btn.onclick = function(){
+            sidebar.classList.toggle("active");
+        }
+        searchbtn.onclick = function(){
+            sidebar.classList.toggle("active");
+        }
+
+    </script>
+
+    <footer>
+    <p class="copyright">&copy;copyright: SmallArt - 2022</p>
+    </footer>
 </body>
 </html>
