adicionando css sobre nos

--- a/sobre.html
+++ b/sobre.html
@@ -67,11 +67,16 @@
         </ul>
         <div class="profile_content">
             <div class="profile">
-                <a href="src/Controller/Client.php?operation=findall">
+                <a href="src/Model/images.php">
                 <i class='bx bx-log-out'></i>
                 </a>
             </div>
         </div>
+    </div>
+    <div class="sobre">
+        <center><h1>Quem somos</h1></center>
+            <p>Somos um site que foca apenas em produtos feitos a mão por artesãos ou pessoas que querem mostrar seus trabalhos sem precisar sair de casa.
+            </p>
     </div>
 
     <script>
